--- a/docs/design/mechanical/cam/start.mdx
+++ b/docs/design/mechanical/cam/start.mdx
@@ -9,15 +9,24 @@ unlisted: true
 The following text will walk you through how to set up and generate G-Code from Fusion.
 If you do not have access to Fusion or the shared work space refer to [**Fusion Sign-Up**](https://frc-team-4143.github.io/docs/mechanical/fusion/fusion-sign-up)
 
-~Before starting check the Fusion Team workspace for the part you are looking for, if it is not there continue.
-
-1. Part Download
-
+- Right click the part in Onshape model or the part tree and click **Export**.
 
 <img src={onshape_export} width="1000"/>
 
-
+- Confirm the part has a descriptive name.
+    - Subassembly
+    - Part Name
+    - Date of Export
+- Format: Step
+- Option: Download
 <img src={onshape_download} width="400"/>
+
+
+
+
+
+
+
 
 import onshape_download from '@site/static/img/mechanical/Fusion/Onshape_Download.png';
 import onshape_export from '@site/static/img/mechanical/Fusion/Onshape_Export.png';
