--- a/docs/software/training/index.mdx
+++ b/docs/software/training/index.mdx
@@ -22,8 +22,8 @@ Each session is offered twice a week to accommodate different schedules and two 
 | <span style={{color: '#4CAF50'}}>**Wednesday**</span>, November 5th, 2025<br/><span style={{color: '#FF9800'}}>**Thursday**</span>, November 6th, 2025 | [Hardware and Software Tools](./training/hardware-software-tools) |
 | <span style={{color: '#2196F3'}}>**Monday**</span>, November 10th, 2025<br/><span style={{color: '#E91E63'}}>**Tuesday**</span>, November 11th, 2025 | [Motors and Drivetrains](./training/motors-drivetrains) |
 | <span style={{color: '#4CAF50'}}>**Wednesday**</span>, November 12th, 2025<br/><span style={{color: '#FF9800'}}>**Thursday**</span>, November 13th, 2025 | [Sensors and Feedback](./training/sensors-feedback) |
-| <span style={{color: '#2196F3'}}>**Monday**</span>, November 17th, 2025<br/><span style={{color: '#E91E63'}}>**Tuesday**</span>, November 18th, 2025 | [Methods and WPILib](./training/methods-wpilib) |
-| <span style={{color: '#4CAF50'}}>**Wednesday**</span>, November 19th, 2025<br/><span style={{color: '#FF9800'}}>**Thursday**</span>, November 20th, 2025 | [Classes and Objects](./training/classes-objects) |
+| <span style={{color: '#2196F3'}}>**Monday**</span>, November 17th, 2025<br/><span style={{color: '#E91E63'}}>**Tuesday**</span>, November 18th, 2025 | [Methods](./training/methods) |
+| <span style={{color: '#4CAF50'}}>**Wednesday**</span>, November 19th, 2025<br/><span style={{color: '#FF9800'}}>**Thursday**</span>, November 20th, 2025 | [WPILib and Simulation](./training/wpilib-sim) |
 | <span style={{color: '#2196F3'}}>**Monday**</span>, November 24th, 2025<br/><span style={{color: '#E91E63'}}>**Tuesday**</span>, November 25th, 2025 | [Subsystems and Mechanisms](./training/subsystems-mechanisms) |
 | 🦃 **Thanksgiving Break** | **No Sessions** 🦃 |
 | <span style={{color: '#2196F3'}}>**Monday**</span>, December 1st, 2025<br/><span style={{color: '#E91E63'}}>**Tuesday**</span>, December 2nd, 2025 | [State Machines and Commands](./training/state-machines-commands) |
