fixes title formatting

--- a/docs/design/mechanical/machining/lathe.mdx
+++ b/docs/design/mechanical/machining/lathe.mdx
@@ -3,34 +3,34 @@ title: Lathe
 hide_table_of_contents: true
 sidebar_position: 7
 ---
-# Lathe:
+# Lathe
 Lathe operations encompass a range of machining techniques conducted on a lathe machine, a versatile tool used for shaping, cutting, drilling, and turning various materials like metal, wood, and plastics. These operations include turning, which produces cylindrical shapes, facing for flat surfaces, and taper turning for tapered shapes. Lathes are fundamental in manufacturing and machining processes, offering precision and flexibility in crafting a wide array of components and products.
 
-## Lathe Safety:
+## Lathe Safety
 
 A lathe is a dangerous piece of industrial equipment and safety must be considered durring operation.  
 :::danger
 
 The dangers include:
-- ***Risk of Entaglement:***  
+- ***Risk of Entaglement***  
     A **major risk** in lathe operations is being pulled into the machine.  
     This may casue serious lacerations, frictions burns, broken bones, and death.   
     This is generaly caused by **loose clothing, hair, or jewelry**.  
     Confirm all **hoodie strings** are tucked inside your hoodie and will not come free.  
 
-- ***High Roataional Energy:***  
+- ***High Roataional Energy***  
     A **moderate risk** in lathe operations is being struck by a rotating object.  
     This can casue lacerations and broken bones.  
     This is generaly caused by **contact with the chuck, leaving the chuck key in the chuck, or by improperly securing the work piece**.  
     To reduce the risk of harm, work slowly and think through your actions and placment of your hands durring operation.
 
-- ***Flying Debris:***  
+- ***Flying Debris***  
     A **minor risk** in lathe operations is being struck by debris.  
     This debris can be metal shavings, objects that have been parted off, or shattered tooling.  
     This can cause minor lacerations and eye injury.  
     To reduce the risk of harm, always **wear saftey glasses** while in proximity of an operational lathe, and place you body to the side or the object you are parting off.
 
-- ***Sharp Edges:***  
+- ***Sharp Edges***  
     A **minor risk** in lathe operations in being cut by sharp edges.  
     Objects like metal shavings, cutting surfaces, and machined edges have sharp edges.  
     This can cause minor lacerations.  
@@ -40,7 +40,7 @@ The dangers include:
     :::note
     **Gloves** should never be worn durring lathe operation due to risk of entanglement.
 :::
-## Lathe Operation:
+## Lathe Operation
 
 workpiece setup
 
@@ -51,66 +51,66 @@ machining
 HUD operation
 Clean up
 
-### Workpiece Setup:
+### Workpiece Setup
 
 The workpiece or stock is the material that will be turning.  
 To properly clamp or chuck the material make sure the 3 teeth of the chuck are fully engaged with the 
 qw=
 
-##### Material Supports: (Optional)
+##### Material Supports (Optional)
 Addition support should be used to brace longer stock, or to keep stock stable durring precise or aggressive turning operation.  
 Extra support can be added by center drilling a hole into the end of the stock  
 
-### Tool Selection:
+### Tool Selection
 
-## Common Operations:
+## Common Operations
 
 Durring the manufacturing of the robot,  
 
-##### Straight Turning:
+##### Straight Turning
 
 <img src={Straight_Turning} width="300"/>
 
 Turning is used to remove material to change the diameter or surface finish of a workpiece.  
 
 
-##### Facing:
+##### Facing
 
 <img src={Facing} width="300"/>
 
-##### Parting:
+##### Parting
 <img src={Parting} width="300"/>
 
 Parting is used to cut off a finished part from the remaining stock material.
 
-##### Drilling:
+##### Drilling
 <img src={Drilling} width="300"/>
 
 Drilling involves
 Drilling is used to 
 
-##### Center Drilling:
+##### Center Drilling
 <img src={Center_Drilling} width="300"/>
 
-##### Sanding:
+##### Sanding
 
 ## Rare Operations
 The following operations are rarely utilized in our manufacturing process.  
 They are however utilized heavily in manufacturing.  
 
-##### Taper Turning:
+##### Taper Turning
 <img src={Taper_Turning} width="300"/>
 
 
-##### Contour Turning:
+##### Contour Turning
 <img src={Contour_Turning} width="300"/>
 
 
-##### Form Turning:
+##### Form Turning
 <img src={Form_Turning} width="300"/>
 
 
-##### Boring:
+##### Boring
 
 <img src={Boring} width="300"/>
 
@@ -119,22 +119,22 @@ Boring is used to increase the the internal diameter (ID) of a workpeice.
 Boring cannot make a new hole, only expand it.
 :::
 
-##### Threading:
+##### Threading
 <img src={Threading_External} width="300"/>
 <img src={Threading_Internal} width="300"/>
 
 
-##### Grooving:
+##### Grooving
 <img src={Grooving} width="300"/>
 
 
-##### Knurling:
+##### Knurling
 <img src={Knurling} width="300"/>
 
 
 ### Tool setup
 
-##### Refrences:
+##### Refrences
 
 Engineering Technology  
 Robert Hewitt  
