--- a/docs/design/mechanical/machining/milling_cnc.mdx
+++ b/docs/design/mechanical/machining/milling_cnc.mdx
@@ -3,32 +3,32 @@ title: CNC Milling
 hide_table_of_contents: true
 sidebar_position: 3
 ---
-# CNC Mill:
+# CNC Mill
 
 Computer numerical control (CNC) Milling is a form of [milling](./milling_manual) where the 
 
 
-## CNC Safety:
+## CNC Safety
 
 A CNC Mill is a dangerous piece of industrial equipment and safety must be considered durring operation.  
 :::danger
 
-The dangers include:
+The dangers include
 
-- ***High Roataional Energy:***  
+- ***High Roataional Energy***  
     A **moderate risk** in CNC Mill durring operations and setup.  
     This can casue lacerations.  
     This is generaly caused by **contact with the tooling or overextending while removing material from the chuck**.  
     To reduce the risk of harm, utilize a brush to move any material fro around the tool and do not use your hands.
     Additionaly when untightening the vice pull the lever twords your body and not away.  
 
-- ***Flying Debris:***  
+- ***Flying Debris***  
     A **minor risk** in CNC Mill operations is being struck by debris.  
     This debris can be metal shavings, objects that have been parted off, or shattered tooling.  
     This can cause minor lacerations and eye injury.  
     To reduce the risk of harm, always **wear saftey glasses** while in proximity of an operational CNC Mill, and confirm the shield is in place.
 
-- ***Sharp Edges:***  
+- ***Sharp Edges***  
     A **minor risk** in CNC Mill operations in being cut by sharp edges.  
     Objects like metal shavings, cutting surfaces, and machined edges have sharp edges.  
     This can cause minor lacerations.  
@@ -39,9 +39,9 @@ The dangers include:
     **Gloves** should never be worn durring CNC Mill operation due to risk of entanglement.
 :::
 
-## CNC Mill Operation:
+## CNC Mill Operation
 
-### Machine Bootup:
+### Machine Bootup
 **Initialize the machine.**
 - **Computer** switched to ON.
 - **Stop** button un-depressed.
@@ -56,7 +56,7 @@ The dangers include:
 <img src={Reset} width="600"/>
 
 
-### Program Setup:
+### Program Setup
 To begin CNC setup first you must import a file from a flash drive prepared by the fusion programmer.  
 
 - Insert the flash drive into the USB port located below the computer.  
@@ -74,9 +74,9 @@ To begin CNC setup first you must import a file from a flash drive prepared by t
 3. Double click copied file.
 <img src={Copy_3} width="400"/>  
 
-### Chucking Material:
+### Chucking Material
 
-### Confirm Setup:
+### Confirm Setup
 Once the program has been loaded and the material has been secured, it is important to check some key parts of the program.
 
 1. Confirm the correct work offset (**G##**).  
