fixes ooo-wpilib page title

--- a/docs/software/training/ooo-wpilib.mdx
+++ b/docs/software/training/ooo-wpilib.mdx
@@ -5,7 +5,7 @@ hide_table_of_contents: true
 sidebar_position: 5
 ---
 
-# WPILib and Simulation
+# Object Oriented Programming and WPILib
 In this module we will cover the basics of Object Oriented Programming. This will include creating classes, methods, and using objects. We will then cover some of the WPILib classes used for controlling a differential drive robot, including kinematics and odometry. Finally, we will cover how to simulate a differential drive robot using WPILib's simulation tools.
 
 ---
