Update and rename ooo-wpilib.mdx to oop-wpilib.mdx

--- a/docs/software/training/oop-wpilib.mdx
+++ b/docs/software/training/oop-wpilib.mdx
@@ -1,5 +1,5 @@
 ---
-title: OOO and WPILib
+title: OOP and WPILib
 description: This is a into to using and creating methods.
 hide_table_of_contents: true
 sidebar_position: 5
@@ -57,4 +57,5 @@ In this module we will cover the basics of Object Oriented Programming. This wil
 - [VSCode](../tools/vscode.mdx): Our primary Integrated Development Environment (IDE) for programming.
 - [Driver Station](../tools/driver-station.mdx): Software used to control and monitor the robot during competitions.
 - [Advantage Scope](../tools/ad-scope.mdx): Tool for analyzing robot performance data.
+
 - [Elastic](../tools/elastic.mdx): Tool for logging and visualizing robot data.
