Updated to fusion.

--- a/docs/design/design_guide/naming.mdx
+++ b/docs/design/design_guide/naming.mdx
@@ -40,7 +40,7 @@ Giving parts descriptive names help your fellow designers to quickly and efficie
     - 2025_Arm  
 - **etc**
 
-***Sub-Assemblies can have their own names. Parts inside these subassemblies do not include the subassemblie's name.**
+***Sub-Assemblies can have their own names. Parts inside these subassemblies do not include the subassemblies name.**
 
 ### Fusion Parts
 
