--- a/docs/design/mechanical/machining/milling_cnc.mdx
+++ b/docs/design/mechanical/machining/milling_cnc.mdx
@@ -10,33 +10,33 @@ Computer numerical control (CNC) Milling is a form of [milling](./milling_manual
 
 ## CNC Safety
 
-A CNC Mill is a dangerous piece of industrial equipment and safety must be considered durring operation.  
+A CNC Mill is a dangerous piece of industrial equipment and safety must be considered during operation.  
 :::danger
 
 The dangers include
 
-- ***High Roataional Energy***  
-    A **moderate risk** in CNC Mill durring operations and setup.  
-    This can casue lacerations.  
-    This is generaly caused by **contact with the tooling or overextending while removing material from the chuck**.  
+- ***High Rotational Energy***  
+    A **moderate risk** in CNC Mill during operations and setup.  
+    This can cause lacerations.  
+    This is generally caused by **contact with the tooling or overextending while removing material from the chuck**.  
     To reduce the risk of harm, utilize a brush to move any material fro around the tool and do not use your hands.
-    Additionaly when untightening the vice pull the lever twords your body and not away.  
+    Additionally when untightening the vice pull the lever towards your body and not away.  
 
 - ***Flying Debris***  
     A **minor risk** in CNC Mill operations is being struck by debris.  
     This debris can be metal shavings, objects that have been parted off, or shattered tooling.  
     This can cause minor lacerations and eye injury.  
-    To reduce the risk of harm, always **wear saftey glasses** while in proximity of an operational CNC Mill, and confirm the shield is in place.
+    To reduce the risk of harm, always **wear safety glasses** while in proximity of an operational CNC Mill, and confirm the shield is in place.
 
 - ***Sharp Edges***  
     A **minor risk** in CNC Mill operations in being cut by sharp edges.  
     Objects like metal shavings, cutting surfaces, and machined edges have sharp edges.  
     This can cause minor lacerations.  
     To avoid being hurt do not handle metal shavings with bare hands, utilize cleaning tools and gloves.  
-    To adoid being hurt machined parts should be sanded/filed to remove sharp edges. 
+    To avoid being hurt machined parts should be sanded/filed to remove sharp edges. 
 
     :::note
-    **Gloves** should never be worn durring CNC Mill operation due to risk of entanglement.
+    **Gloves** should never be worn during CNC Mill operation due to risk of entanglement.
 :::
 
 ## CNC Mill Operation
@@ -113,7 +113,8 @@ It is important to step through the start of the program and each machining oper
     - Continuously step through the program and gauge wether it is moving to far to collide with any obstructions.
 <img src={validating_1} width="600"/>  
 
-:::warning Torque Monitoring
+### Torque Monitoring
+:::warning
 - While cutting and drilling, monitor the torque of the spindle motor.
     - If the torque strays into the **yellow zone reduce the feed rate**.
     - If the torque strays into the **red zone**, and feed rate reduction does not help, **stop the program immediately** and investigate the issue.
