--- a/docs/design/mechanical/cam/tools.mdx
+++ b/docs/design/mechanical/cam/tools.mdx
@@ -5,10 +5,11 @@ sidebar_position: 2
 ---
 
 Tool library : Here  
-**Tools #'s and Feed Rates:**
-
-|ID|Tool|Feed Rate - Aluminum|
-|---|---|---|
+## CNC Mill Tools #'s and Settings
+***The following recommendations are for 6061-T6 Aluminum stock.***  
+**RPM**: 5,000 RPM 
+|ID|Tool|Feed Rate| Stepdown/Cutting Depth|
+|---|---|---|---|
 |1  |0.16" Drill      |24 inchs/minute
 |2  |0.125" End Mill  |6 inchs/minute
 |3  |0.25" End Mill   |10 inchs/minute
@@ -29,7 +30,7 @@ Tool library : Here
 |19 |0.25" Ball Endmill|
 |20 |0.75" Slotting Cutter|
 
-**Work Offsets #'s and Locations:**  (Need to confirm....)
+## CNC Mill Work Offsets #'s and Locations  (Need to confirm....)
 |Fusion ID|G-Code ID|Location|
 |---|---|---|
 |1  |G54      |Right side bottom of vice.
@@ -43,3 +44,5 @@ Tool library : Here
 - All work offsets are relative to the back face of the vice, not the front face.
 - G57 is the most commonly used work offset for machining in our shop.
 :::
+
+## Router Tools and Settings
