--- a/docs/design/mechanical/machining/lathe.mdx
+++ b/docs/design/mechanical/machining/lathe.mdx
@@ -8,37 +8,37 @@ Lathe operations encompass a range of machining techniques conducted on a lathe 
 
 ## Lathe Safety
 
-A lathe is a dangerous piece of industrial equipment and safety must be considered durring operation.  
+A lathe is a dangerous piece of industrial equipment and safety must be considered during operation.  
 :::danger
 
 The dangers include:
-- ***Risk of Entaglement***  
+- ***Risk of Entanglement***  
     A **major risk** in lathe operations is being pulled into the machine.  
-    This may casue serious lacerations, frictions burns, broken bones, and death.   
-    This is generaly caused by **loose clothing, hair, or jewelry**.  
+    This may cause serious lacerations, frictions burns, broken bones, and death.   
+    This is generally caused by **loose clothing, hair, or jewelry**.  
     Confirm all **hoodie strings** are tucked inside your hoodie and will not come free.  
 
-- ***High Roataional Energy***  
+- ***High Rotational Energy***  
     A **moderate risk** in lathe operations is being struck by a rotating object.  
-    This can casue lacerations and broken bones.  
-    This is generaly caused by **contact with the chuck, leaving the chuck key in the chuck, or by improperly securing the work piece**.  
-    To reduce the risk of harm, work slowly and think through your actions and placment of your hands durring operation.
+    This can cause lacerations and broken bones.  
+    This is generally caused by **contact with the chuck, leaving the chuck key in the chuck, or by improperly securing the work piece**.  
+    To reduce the risk of harm, work slowly and think through your actions and placement of your hands during operation.
 
 - ***Flying Debris***  
     A **minor risk** in lathe operations is being struck by debris.  
     This debris can be metal shavings, objects that have been parted off, or shattered tooling.  
     This can cause minor lacerations and eye injury.  
-    To reduce the risk of harm, always **wear saftey glasses** while in proximity of an operational lathe, and place you body to the side or the object you are parting off.
+    To reduce the risk of harm, always **wear safety glasses** while in proximity of an operational lathe, and place you body to the side or the object you are parting off.
 
 - ***Sharp Edges***  
     A **minor risk** in lathe operations in being cut by sharp edges.  
     Objects like metal shavings, cutting surfaces, and machined edges have sharp edges.  
     This can cause minor lacerations.  
     To avoid being hurt do not handle metal shavings with bare hands, utilize cleaning tools and gloves.  
-    To adoid being hurt machined parts should be sanded/filed to remove sharp edges. This can be acomplished on the lathe or any other piece of grinding equipment.
+    To avoid being hurt machined parts should be sanded/filed to remove sharp edges. This can be accomplished on the lathe or any other piece of grinding equipment.
 
     :::note
-    **Gloves** should never be worn durring lathe operation due to risk of entanglement.
+    **Gloves** should never be worn during lathe operation due to risk of entanglement.
 :::
 ## Lathe Operation
 
@@ -58,14 +58,14 @@ To properly clamp or chuck the material make sure the 3 teeth of the chuck are f
 qw=
 
 ##### Material Supports (Optional)
-Addition support should be used to brace longer stock, or to keep stock stable durring precise or aggressive turning operation.  
+Addition support should be used to brace longer stock, or to keep stock stable during precise or aggressive turning operation.  
 Extra support can be added by center drilling a hole into the end of the stock  
 
 ### Tool Selection
 
 ## Common Operations
 
-Durring the manufacturing of the robot,  
+During the manufacturing of the robot,  
 
 ##### Straight Turning
 
@@ -114,7 +114,7 @@ They are however utilized heavily in manufacturing.
 
 <img src={Boring} width="300"/>
 
-Boring is used to increase the the internal diameter (ID) of a workpeice.
+Boring is used to increase the the internal diameter (ID) of a workpiece.
 :::note
 Boring cannot make a new hole, only expand it.
 :::
@@ -134,7 +134,7 @@ Boring cannot make a new hole, only expand it.
 
 ### Tool setup
 
-##### Refrences
+##### References
 
 Engineering Technology  
 Robert Hewitt  
