--- a/docs/design/mechanical/machining/safety.mdx
+++ b/docs/design/mechanical/machining/safety.mdx
@@ -12,9 +12,9 @@ sidebar_position: 1
     - Closed Toed Shoes
         - **Closed-toe shoes are required at all times in the engineering lab.** Open-toe footwear—including sandals, flip-flops, and clogs—are strictly prohibited due to the risk of hot chips, falling objects, and other physical and chemical hazards.
     - Jewelry
-        - **Jewlry can pose a serious saftey hazard.** Remove rings, unsecured necklaces, loose bracelets, and watches before machining due to the risk of getting caught in machinery or conducting elctricity.
+        - **Jewelry can pose a serious safety hazard.** Remove rings, unsecured necklaces, loose bracelets, and watches before machining due to the risk of getting caught in machinery or conducting electricity.
     - Safety Glasses
-        - Safety glasses must be worn while work is being performed in a clsoe proximity. This is to protecty againt flying debris. **Regular glasses are not a suitable replacment for saftey glasses.**
+        - Safety glasses must be worn while work is being performed in a close proximity. This is to protect against flying debris. **Regular glasses are not a suitable replacement for safety glasses.**
     - Long Hair
         - **Long hair must be securely restrained** before entering a work area. Hair longer than shoulder length must be tied back, secured with a cap, or bandanna. This is to prevent entanglement in machinery. Loose ponytails or unsecured strands are not acceptable.
 
@@ -34,7 +34,7 @@ sidebar_position: 1
 
 - **Emergency Awareness**    (Add maps and pictures)
     - Emergency Stops
-        - Before working with or apraching an peice of active machinery identify emergency stops.
+        - Before working with or approaching an piece of active machinery identify emergency stops.
         - In cases where there are no emergency stops identify what to do in case of an emergency.
     - Safety Equipment
         - Locate the shop's fire extinguished, first aid kit, and eye wash station.
