mechs and subsystems lesson

--- a/docs/software/robot_dev/mechanisms.mdx
+++ b/docs/software/robot_dev/mechanisms.mdx
@@ -1,12 +1,12 @@
 ---
-title: Programming Standards
-description: MARS/WARS programming standards for robot projects
+title: Subsystems
+description: Subsystem basics and programming tips
 hide_table_of_contents: true
-sidebar_position: 10
+sidebar_position: 3
 ---
 
 :::note
 This page is a work in progress and will be updated with more detailed information soon.
 :::
 
-# Programming Standards
+# Mechanisms
