--- a/docs/software/robot_dev/telemetry.mdx
+++ b/docs/software/robot_dev/telemetry.mdx
@@ -4,6 +4,9 @@ description: Displaying and updating live robot telemetry
 hide_table_of_contents: true
 sidebar_position: 8
 ---
+:::note
+This page is a work in progress and will be updated with more detailed information soon.
+:::
 
 # Robot Telemetry
 
