--- a/docs/software/robot_dev/testing.mdx
+++ b/docs/software/robot_dev/testing.mdx
@@ -4,6 +4,9 @@ description: Robot testing procedures and concepts
 hide_table_of_contents: true
 sidebar_position: 9
 ---
+:::note
+This page is a work in progress and will be updated with more detailed information soon.
+:::
 
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
