--- a/docs/software/training/index.mdx
+++ b/docs/software/training/index.mdx
@@ -24,7 +24,7 @@ Each session is offered twice a week to accommodate different schedules and two 
 | <span style={{color: '#4CAF50'}}>**Wednesday**</span>, November 12th, 2025<br/><span style={{color: '#FF9800'}}>**Thursday**</span>, November 13th, 2025 | [Sensors and Feedback](./training/sensors-feedback) |
 | <span style={{color: '#2196F3'}}>**Monday**</span>, November 17th, 2025<br/><span style={{color: '#E91E63'}}>**Tuesday**</span>, November 18th, 2025 | [Methods](./training/methods) |
 | <span style={{color: '#4CAF50'}}>**Wednesday**</span>, November 19th, 2025<br/><span style={{color: '#FF9800'}}>**Thursday**</span>, November 20th, 2025 | [OOP and WPILib](./training/oop-wpilib) |
-| <span style={{color: '#2196F3'}}>**Monday**</span>, November 24th, 2025<br/><span style={{color: '#E91E63'}}>**Tuesday**</span>, November 25th, 2025 | [Mechanisms and Subsystems](./training/mechanisms-subsystems.mdx) |
+| <span style={{color: '#2196F3'}}>**Monday**</span>, November 24th, 2025<br/><span style={{color: '#E91E63'}}>**Tuesday**</span>, November 25th, 2025 | [Mechanisms and Subsystems](./training/mechanisms-subsystems) |
 | 🦃 **Thanksgiving Break** | **No Sessions** 🦃 |
 | <span style={{color: '#2196F3'}}>**Monday**</span>, December 1st, 2025<br/><span style={{color: '#E91E63'}}>**Tuesday**</span>, December 2nd, 2025 | [State Machines and Commands](./training/state-machines-commands) |
 | <span style={{color: '#4CAF50'}}>**Wednesday**</span>, December 3rd, 2025<br/><span style={{color: '#FF9800'}}>**Thursday**</span>, December 4th, 2025 | [Control Theory](./training/control-theory) |
